[package]
name = "rs-partition"
version = "0.1.0"
authors = ["roger <rocurley@gmail.com>"]

[[bin]]
name = "partition"
path = "bin/main.rs"

[lib]
name = "partition_lib"
path = "src/lib.rs"


[dependencies]
num = "0.2.0"
cpuprofiler = "0.0.3"
proptest = "0.9"
itertools = "0.8"
serde_json = "1.0"
structopt = "0.2.14"

[profile.release]
debug=true
